refactor: MM-95 Rename some constants and methods, switch to var in SecurityConfig. (#90)
Reviewed-on: https://gitea.busybunyip.com/medical-models/medical-models-service/pulls/90
Co-authored-by: JonathonClifford <jono.cliff@gmail.com>
Co-committed-by: JonathonClifford <jono.cliff@gmail.com>